--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --open --config webpack.config.js",
-     "start:docker": "webpack serve --config webpack.docker.config.js"
+    "start:docker": "webpack serve --config webpack.docker.config.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.11.0",
   "dependencies": {
-    "common-utils": "file:../libs/common-utils/common-utils-1.0.0.tgz",
+    "common-utils": "file:..\\libs\\common-utils\\common-utils-1.0.0.tgz",
+    "common-resources": "link:../libs/common-resources",
+    "common-components-react": "file:../libs/common-components-react/common-components-react-1.0.0.tgz",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
